# bsforecast-advanced

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: plot_training.py
src/bsfa/: __init__.py  cli.py  data.py  forecaster.py  layers.py  metrics.py  training.py
tests/: test_smoke.py
