[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsfa"
version = "0.1.0"
description = "Balance-sheet forecasting with original-space constraints and robust MAPE/Huber loss."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name", email="you@example.com"}]
license = {text = "MIT"}
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.2",
    "numpy>=1.26.0",
    "tensorflow>=2.15.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "typer>=0.12.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
bsfa = "bsfa.cli:app"
